# wanipop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: logo.xcf
src/: App.css  App.tsx  App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  bash-build-script  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  wanikani.rs
src/components/: AnswerField.tsx  QuizView.vue  ResultItem.tsx  ResultItem.vue  ResultsDisplay.tsx  ResultsView.vue  SettingsView.vue  SubjectDisplay.tsx  SubmissionItem.vue  SubmissionView.vue
src/stores/: study.ts
