[package]
name = "WaniPOP"
version = "0.1.0"
description = "An application that sits in your system tray and pops up on occasion, bugging you to do a few WaniKani reviews."
authors = ["noxxxxxious"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wanipop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0" #for getting platform-specific config directory
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
futures = "0.3"
tokio = { version = "1.45.0", default-features = false, features = ["rt-multi-thread", "time"] }
tauri-plugin-notification = "2"
